# GetYourStock

./: .gitignore  README.md  STREAMLIT_DEPLOYMENT.md  app.py  env.example  pyproject.toml  render.yaml  requirements.txt  stock_price_model.h5  streamlit_app.py  supabase_client.py
.streamlit/: secrets.toml
