[project]
name = "stock-prediction-app"
version = "1.0.0"
description = "AI-powered stock prediction app using LSTM neural networks"
requires-python = ">=3.9,<3.13"
dependencies = [
    "streamlit>=1.28.0",
    "numpy>=1.21.0,<2.0.0",
    "pandas>=1.3.0,<3.0.0",
    "matplotlib>=3.5.0,<4.0.0",
    "scikit-learn>=1.0.0,<2.0.0",
    "tensorflow-cpu>=2.15.0,<=2.17.1",
    "yfinance>=0.2.0,<1.0.0",
    "plotly>=5.0.0,<6.0.0",
    "python-dotenv>=0.19.0",
    "requests>=2.25.0,<3.0.0",
    "psutil>=5.8.0",
    "supabase>=1.0.0,<3.0.0",
    "postgrest>=0.10.0",
    "gotrue>=0.5.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta" 